# CSAPP-labs

./: README.md
archlaba-handout/: Makefile
archlaba-handout/sim/misc/: yas
archlaba-handout/sim/misc/my/: copy.yo  copy.ys  examples.0.s  examples.1.s  examples.o.0  examples.s  rsum.yo  rsum.ys  sum.yo  sum.ys
archlaba-handout/sim/pipe/: a.yo  a.ys  atest.yo  atest.ys  ldriver.yo  ldriver.ys  ncopy (复件).ys1  ncopy.yo  ncopy.ys  ncopy.ys.955  ncopy.ys.968  ncopy.ys.p  ncopy.ys.t  ncopy.ys1  pipe-full (复件).hcl  pipe-lf.c  pipe-lf.c.hcl  pipe-lf.hcl  pipe-nt-c.hcl  pipe-nt.hcl  psim  sdriver.yo  sdriver.ys
archlaba-handout/sim/seq/: seq-full.hcl  seq-full.hcl.add  ssim
archlaba-handout/sim/y86-code/: asumj.yo  asumj.ys
attacklab/target126/: c1  c1.in  c2  c2.in  c3  c3.in  cookie.txt  ctarget  ctarget.s  farm.c  farm.s  r2  r2.in  r3  r3.comment  r3.in  rtarget  rtarget.s
attacklab/target126/c2tmp/: c2.d  c2.s
attacklab/target126/c3tmp/: a.out  c3.d  c3.s  printasc.c
attacklab/target126/mytmp/: a.d  a.s
attacklab/target126/r2tmp/: a.d  a.s
cachelab-handout/: 1500010716@pku.edu.cn_handin.tar  CMakeLists.txt  csim.c  trace.tmp  trans.c
datalab-handout/: bits.c
malloclab-handout/: CMakeLists.txt  main.c  mdriver.cnew  mm.c  mm.h
proxylab-handout/: CMakeLists.txt  Makefile  a.txt  cache.c  cache.h  csapp.c  csapp.h  defs.h  driver.sh  hri.c  hri.h  proxy.c  proxy.h  res.c  res.h
proxylab-handout/tiny/: tiny
tshlab-handout/: CMakeLists.txt  a.txt  tsh.c
